# lang-portal/backend-go/internal/domain/models/pagination.go
@@ -1,0 +1,9 @@
+package models
+
+// PaginationResponse represents pagination metadata
+type PaginationResponse struct {
+	CurrentPage  int `json:"current_page"`
+	TotalPages   int `json:"total_pages"`
+	TotalItems   int `json:"total_items"`
+	ItemsPerPage int `json:"items_per_page"`
+}
