# lang-portal/backend-go/internal/domain/models/word.go
@@ -14,9 +14,4 @@ type WordListResponse struct {
 	Pagination PaginationResponse `json:"pagination"`
 }
 
-type PaginationResponse struct {
-	CurrentPage  int `json:"current_page"`
-	TotalPages   int `json:"total_pages"`
-	TotalItems   int `json:"total_items"`
-	ItemsPerPage int `json:"items_per_page"`
-}
+
